<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="6"
    android:columnCount="4"
    android:padding="16dp">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:gravity="end"
        android:textSize="48sp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:layout_rowSpan="1"
        android:layout_columnSpan="4"
        android:padding="8dp"
        android:layout_gravity="fill_horizontal"/>

    <!-- Кнопки -->
    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_clear_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="1"
        android:layout_column="0" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_divide_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="1"
        android:layout_column="1" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_multiply_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="1"
        android:layout_column="2" />

    <Button
        android:id="@+id/buttonBackspace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_backspace_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="1"
        android:layout_column="3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_7_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="2"
        android:layout_column="0" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_8_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="2"
        android:layout_column="1" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_9_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="2"
        android:layout_column="2" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_minus_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="2"
        android:layout_column="3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_4_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="3"
        android:layout_column="0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_5_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="3"
        android:layout_column="1" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_6_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="3"
        android:layout_column="2" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_plus_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="3"
        android:layout_column="3" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_1_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="4"
        android:layout_column="0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_2_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="4"
        android:layout_column="1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_3_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="4"
        android:layout_column="2" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_equals_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_rowSpan="2"
        android:textSize="32sp"
        android:layout_row="4"
        android:layout_column="3" />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_0_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:textSize="32sp"
        android:layout_row="5"
        android:layout_column="0" />

    <Button
        android:id="@+id/buttonComma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_comma_sign"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:layout_row="5"
        android:layout_column="2" />

</GridLayout>